[package]
name = "simple_hypervisor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "aarch64-unknown-none.json"

[dependencies]
volatile = "0.4.6"